  help_init()
	- If we have at least two entries' worth of blank space, use it
	  to display more of "^Space" and "M-Space". (DLR, suggested by
	  Benno Schulenberg)
	- Add various wording fixes. (DLR and Benno Schulenberg)
	- If one of the help strings ends in newlines followed by a
	  space, move the space to the next help string to make it
	  easier for translators to see. (Benno Schulenberg)
  parse_help_input()
	- Add Space and - as aliases for PageDown and PageUp, for
	  consistency with the file browser. (DLR, suggested by Benno
	  Schulenberg)
	- Remove redundant key checks. (DLR)
  help_line_len()
	- Properly handle the case where we can't break the line of help
	  text. (DLR)
	- Wrap the line of help text at (COLS - 1) instead of
	  (COLS - 8), for consistency. (DLR, suggested by Benno
	  Schulenberg)
- nano.c:
  print1opt_full()
	- Rename to print_opt_full(), for consistency. (DLR)
  usage()
	- Fix inaccuracies in the usage example. (DLR)
	- Put command line arguments in <>'s instead of []'s, as the
	  latter imply that the arguments are optional when they aren't.
	  (DLR, found by Benno Schulenberg)
  renumber()
	- Remove invalid assert. (DLR, found by Filipe Moreira)
  do_input()
	- Remove redundant check for allow_funcs' being TRUE when we get
	  KEY_MOUSE. (DLR)
	- Don't blow away the cutbuffer when we get a shortcut and the
	  function associated with it is do_cut_till_end(). (DLR)
	- Simplify the routine to preserve the cutbuffer when we call a
	  cutting or copying function associated with a shortcut. (DLR)
- nano.h:
	- Reorder the toggle #defines to match their corresponding order
	  in toggle_init(). (DLR)
	- Move the #include for sys/param.h here from nano.c, and add an
	  #ifdef around it. (DLR)
- prompt.c:
  get_prompt_string()
	- Include the handling of the help key even when help is
	  disabled, so that we aren't erroneously kicked out of the
	  statusbar prompt under any circumstances. (DLR, found by Benno
	  Schulenberg)